Fix witdh on mobile

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -127,7 +127,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        
+
         text-align: center;
         border-radius: 50%;
         bottom: 70px;
@@ -145,6 +145,7 @@
     }
 
     .display-container {
+        width: 100vw;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
